# ai-powered-blog-writer

./: .gitignore  ARCH.md  DONE.md  PLAN.md  PRODUCT_BRIEF.md  RULES-INDEX.md  TODO.md  docker-compose.yml  env.example  fly.toml  package.json  turbo.json  vercel.json
.github/workflows/: ci.yml
apps/frontend/: next.config.js  package.json  tailwind.config.js
apps/frontend/app/: layout.tsx  page.tsx
apps/frontend/components/: AnalyticsDash.tsx  AuditLog.tsx  Billing.tsx  ClusterPlanner.tsx  Comments.tsx  Compliance.tsx  ContentCalendar.tsx  ErrorTracking.tsx  ImagePicker.tsx  InternalLinks.tsx  KeywordDiscover.tsx  LoadTesting.tsx  MDXEditor.tsx  Observability.tsx  OutlineComposer.tsx  PublishPanel.tsx  QAPanel.tsx  RolesApprovals.tsx  SERPSnapshot.tsx  SchemaEditor.tsx  Security.tsx  Versions.tsx
apps/gateway/: Dockerfile  package.json
apps/gateway/src/: app.module.ts  main.ts
apps/gateway/src/modules/auth/guards/: jwt-auth.guard.ts
apps/gateway/src/modules/drafts/: drafts.module.ts
apps/gateway/src/modules/outlines/: outlines.module.ts
apps/gateway/src/modules/posts/: posts.controller.ts  posts.service.ts
apps/workers/: Dockerfile  pyproject.toml  requirements.txt
apps/workers/compliance_worker/: main.py
apps/workers/ghost_connector/: main.py
apps/workers/internal_links_worker/: main.py
apps/workers/medium_connector/: main.py
apps/workers/metrics_worker/: main.py
apps/workers/publish_worker/: main.py
apps/workers/refresh_worker/: main.py
apps/workers/security_worker/: main.py
apps/workers/seo_worker/: main.py
apps/workers/workers/: __init__.py  cluster_worker.py  draft_worker.py  image_worker.py  outline_worker.py  serp_worker.py
k8s/: deployment.yaml  secrets.yaml
scripts/: deploy.sh  init-db.sql
(+2 files in other folders)
